Added login.component with styles

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -1,3 +1,14 @@
+@import './light-theme-colors.less';
+// @import './dark-theme-colors.less';
+@import './buttons.less';
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    background: var(--bodyBackground);
+    margin: 0;
+    height: 100vh;
+    font-family: 'Roboto';
 }
