--- a/src/assets/styles/light-theme-colors.less
+++ b/src/assets/styles/light-theme-colors.less
@@ -1,8 +1,9 @@
 :root {
-    --bodyBackground: #fefefe;
-    --loginInputBorder: #eee;
     --buttonBackgroundPrimary: #32cd32;
     --buttonColorPrimary: #fafafa;
     --buttonBackgroundDisabled: #eee;
     --buttonColorDisabled: #777;
 }
+
+@bodyBackground: #fefefe;
+@loginInputBorder: #eee;
