--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: var(--bodyBackground);
+    background: @bodyBackground;
     margin: 0;
     height: 100vh;
     font-family: 'Roboto';
