--- a/src/app/login/login.component.less
+++ b/src/app/login/login.component.less
@@ -1,3 +1,5 @@
+@import '../../assets/styles/light-theme-colors.less';
+
 .login {
     display: flex;
     flex-direction: column;
@@ -20,14 +22,16 @@
       display: flex;
       flex-direction: column;
       border-radius: 5px;
-      border: 4px solid var(--loginInputBorder);
+      border: 4px solid;
+      border-color: @loginInputBorder;
 
       input {
         all: unset;
         padding: 10px 15px;
 
         &:not(:last-child) {
-          border-bottom: 2px solid var(--loginInputBorder);
+          border-bottom: 2px solid;
+          border-color:  @loginInputBorder;
         }
       }
     }
