--- a/src/app/login/login.component.less
+++ b/src/app/login/login.component.less
@@ -7,6 +7,10 @@
     justify-content: center;
     height: 100vh;
     padding: 35px 20px;
+    position: fixed;
+    z-index: 888;
+    width: 100%;
+    background: #fff;
 
     &__title {
         text-align: center;
