--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -9,6 +9,11 @@
 body {
     background: @bodyBackground;
     margin: 0;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
     font-family: 'Roboto';
+}
+
+app-root {
+  padding: 45px 0 55px;
 }
