--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -1,6 +1,7 @@
 @import './light-theme-colors.less';
 // @import './dark-theme-colors.less';
 @import './buttons.less';
+@import './interface.less';
 
 * {
     box-sizing: border-box;
