--- a/src/app/sociality/messages/messages.component.html
+++ b/src/app/sociality/messages/messages.component.html
@@ -1,5 +1,22 @@
-<b>Messages</b>
-<hr>
-<ul>
-  <li *ngFor="let message of messages"><b>{{ message.author }}</b> (<i>{{ message.date }}</i>)<br>{{ message.message }}</li>
-</ul>
+<div class="messages">
+  <div class="messages__search pk-input__search">
+    <label for="searchMessage">
+      <i class="material-icons">search</i>
+    </label>
+    <input  type="text" placeholder="Search" id="searchMessage" [(ngModel)]="searchText">
+  </div>
+  <div class="message" *ngFor="let message of (messages | filter:searchText:'author')">
+    <div class="pk-avatar">
+      <img [src]=message.avatar alt="#">
+      <div class="pk-status pk-status--online"></div>
+    </div>
+    <div class="message__content">
+      <div class="message__author">
+        <span>{{ message.author }}</span>
+      </div>
+      <div class="message__text">
+        <span>{{ message.message }}</span>
+      </div>
+    </div>
+  </div>
+</div>
