--- a/src/app/sociality/messages/messages.component.less
+++ b/src/app/sociality/messages/messages.component.less
@@ -6,9 +6,13 @@
   display: flex;
   align-items: center;
   width: 100%;
+  outline: none;
+  text-decoration: none;
+  transition: .2s;
+  border-bottom: 1px solid #f6f6f6;
 
-  &:not(:last-child) {
-    border-bottom: 1px solid #f6f6f6;
+  &:hover {
+    background: #fafafa;
   }
 
   &__avatar {
@@ -51,5 +55,37 @@
   &__text {
     color: #888;
     font-size: 10pt;
+  }
+
+  &__info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    &--time {
+      font-size: 8pt;
+      width: 60px;
+      color: #ccc;
+      margin-bottom: 5px;
+    }
+
+    &--count {
+      display: flex;
+      justify-content: center;
+
+      span {
+        @size: 18px;
+        background: #ff1493;
+        border-radius: @size;
+        width: @size;
+        height: @size;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 8pt;
+        color: #fff;
+        font-weight: bold;
+      }
+    }
   }
 }
