--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -13,8 +13,9 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Roboto';
+    padding: 0;
 }
 
 app-root {
-  padding: 45px 0 120px;
+  padding: 0 0 120px;
 }
