--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,16 @@
 <div class="login" *ngIf="show">
-    <div class="login__title">{{ text.title }}</div>
-    <form class="login__form" (ngSubmit)="onSubmit(form)" #form="ngForm">
-      <div class="login__inputs">
-        <input name="login" ngModel type="text" [placeholder]=text.login>
-        <input name="password" ngModel type="password" [placeholder]=text.pass>
-      </div>
-      <input type="submit" class="button button--primary" [value]=text.signIn>
-      <div class="login__links">
-        <a href="#">{{ text.signUp }}</a>
-        <a href="#">{{ text.forgotPass }}</a>
-      </div>
-    </form>
+  <div class="logo">
+    <img src="assets/icons/logo.svg" alt="Sociality">
+  </div>
+  <form class="login__form" (ngSubmit)="onSubmit(form)" #form="ngForm">
+    <div class="login__inputs">
+      <input name="login" ngModel type="text" [placeholder]=text.login>
+      <input name="password" ngModel type="password" [placeholder]=text.pass>
+    </div>
+    <input type="submit" class="button button--primary" [value]=text.signIn>
+    <div class="login__links">
+      Need account?
+      <a routerLink="/registration">{{ text.signUp }}</a>
+    </div>
+  </form>
 </div>
