Get profile by login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
     <a routerLink="/friends" routerLinkActive="active">
       <i class="material-icons">people</i>
     </a>
+    <a routerLink="/music" routerLinkActive="active">
+      <i class="material-icons">audiotrack</i>
+    </a>
     <a routerLink="/messages" routerLinkActive="active">
       <i class="material-icons">message</i>
     </a>
