Updated profile, messages, friends and other pages

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -6,7 +6,7 @@
     <div class="login__inputs">
       <input name="login" autocomplete="off" ngModel type="text" [placeholder]=text.login>
       <input name="password" autocomplete="off" ngModel type="password" [placeholder]=text.pass>
-      <input name="passwordRepeat" autocomplete="off" ngModel type="password" [placeholder]=text.passRepeat>
+      <input name="repeatedPassword" autocomplete="off" ngModel type="password" [placeholder]=text.passRepeat>
     </div>
     <input type="submit" class="button button--primary" [value]=text.signUp>
     <div class="login__links">
