--- a/src/app/sociality/friends/friends.component.less
+++ b/src/app/sociality/friends/friends.component.less
@@ -4,6 +4,17 @@
   background: #fff;
   width: 100%;
 
+  &__count {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    padding: 0 20px;
+    font-size: 12px;
+    color: #666;
+    background: #fdfdfd;
+    border-bottom: 1px solid #f6f6f6;
+  }
+
   &__name {
     overflow: hidden;
     span {
@@ -47,4 +58,17 @@
       cursor: pointer;
     }
   }
+}
+
+.no-friends {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
+  color: #888;
+}
+
+a {
+  text-decoration: none;
 }
