--- a/src/app/sociality/profile/profile.component.html
+++ b/src/app/sociality/profile/profile.component.html
@@ -12,7 +12,7 @@
   </div>
   <a href="#" class="profile__message">Send Message</a>
   <ul class="profile__info">
-    <li><i class="material-icons">smartphone</i>{{ profile.phone }}</li>
-    <li><i class="material-icons">mail_outline</i>{{ profile.email }}</li>
+    <li *ngIf="profile.phone"><i class="material-icons">smartphone</i>{{ profile.phone }}</li>
+    <li *ngIf="profile.email"><i class="material-icons">mail_outline</i>{{ profile.email }}</li>
 </ul>
 </div>
