--- a/src/app/login/login.component.less
+++ b/src/app/login/login.component.less
@@ -11,7 +11,8 @@
     position: fixed;
     z-index: 888;
     width: 100%;
-    background: linear-gradient(to top, @primary, #817e9a);
+    // background: linear-gradient(to top, lighten(@primary, 20%), mix(@primary, @action, 60%));
+    background: lighten(mix(@primary, @action, 90%), 10%);
 
     .logo {
       padding: 10px;
