--- a/src/app/sociality/friends/friends.component.html
+++ b/src/app/sociality/friends/friends.component.html
@@ -12,7 +12,9 @@
     <div class="friends__left">
       <div class="pk-avatar">
         <img [src]="friend.avatar" alt="#">
-        <div class="pk-status pk-status--not-here"></div>
+        <div class="pk-status" [class.pk-status--online]="friend.online"
+                               [class.pk-status--offline]="!friend.online"
+        ></div>
       </div>
       <div class="friends__name">
         <span>{{ friend.name }}</span>
