--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
     <a routerLink="/friends" routerLinkActive="active">
       <i class="material-icons">people</i>
     </a>
-    <a routerLink="/music" routerLinkActive="active">
+    <!-- <a routerLink="/music" routerLinkActive="active">
       <i class="material-icons">audiotrack</i>
-    </a>
+    </a> -->
     <a routerLink="/messages" routerLinkActive="active">
       <i class="material-icons">message</i>
     </a>
