--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login" *ngIf="show">
-  <!-- <div class="logo">
+  <div class="logo">
     <img src="assets/icons/logo.svg" alt="Sociality">
-  </div> -->
+  </div>
   <form class="login__form" (ngSubmit)="onSubmit(form)" #form="ngForm">
     <div class="login__inputs">
       <input name="login" ngModel type="text" [placeholder]=text.login>
