--- a/src/app/sociality/messages/dialog/dialog.component.less
+++ b/src/app/sociality/messages/dialog/dialog.component.less
@@ -4,6 +4,13 @@
   display: flex;
   flex-direction: column;
 
+  &__time {
+    color: #aaa;
+    display: flex;
+    align-items: center;
+    font-size: 8pt;
+  }
+
   &__message {
     display: flex;
 
@@ -98,6 +105,11 @@
   box-shadow: 0 -2px 2px #eee;
   height: 60px;
   padding: 0 5px;
+
+  button {
+    background: none;
+    border: none;
+  }
 
   i {
     color: #555;
