--- a/src/app/sociality/messages/dialog/dialog.component.html
+++ b/src/app/sociality/messages/dialog/dialog.component.html
@@ -1,45 +1,23 @@
 <app-view-image></app-view-image>
-<!-- {{ messages | json }} -->
 <div class="dialog">
   <div class="dialog__message" [class.dialog__message--from]="message.authorId == id" *ngFor="let message of messages">
-    <div class="dialog__time" *ngIf="message.authorId == id">2:33 PM</div>
+    <div class="dialog__time" *ngIf="message.authorId == id">{{ message.messageDate | date:'shortTime' }}</div>
     <div class="dialog__text" *ngIf="message.type == 'text'">
       {{ message.messageText }}
     </div>
-    <div class="dialog__time" *ngIf="message.authorId != id">2:29 PM</div>
+    <div class="dialog__image" *ngIf="message.type == 'image'" (click)="showImage(message.messageImage)">
+      <img src="http://localhost:5000/images?id={{ message.messageImage }}">
+      <div class="dialog__image-description">View image</div>
+      <i class="material-icons">camera_alt</i>
+    </div>
+    <div class="dialog__time" *ngIf="message.authorId != id">{{ message.messageDate | date:'shortTime' }}</div>
   </div>
-  <!-- <div class="dialog__message">
-    <div class="dialog__text">Hey! How are u? asd as das das das dasd as</div>
-  </div>
-  <div class="dialog__message dialog__message--from">
-    <div class="dialog__text">Hi! I'm fine and you? asd as das das das dasd as</div>
-  </div>
-  <div class="dialog__message">
-    <div class="dialog__text">Nice...</div>
-  </div>
-  <div class="dialog__message dialog__message--from" (click)="showImage('assets/dev/images/big_avatar.jpg')">
-      <div class="dialog__image">
-        <img src="assets/dev/images/avatar.jpg">
-        <div class="dialog__image-description">View Full</div>
-        <i class="material-icons">camera_alt</i>
-      </div>
-  </div>
-  <div class="dialog__message">
-    <div class="dialog__text">Nice girl, but I have montains!</div>
-  </div>
-  <div class="dialog__message" (click)="showImage('assets/dev/images/img1_f.jpeg')">
-      <div class="dialog__image">
-        <img src="assets/dev/images/img1.jpeg">
-        <div class="dialog__image-description">View Full</div>
-        <i class="material-icons">camera_alt</i>
-      </div>
-  </div> -->
 </div>
 <form class="message" (ngSubmit)="onSubmit(form)" #form="ngForm">
   <label for="fileAttach">
     <i class="material-icons">camera_alt</i>
   </label>
-  <input #file (change)="onChange($event)" id="fileAttach" type="file" name="pic" accept="image/*" hidden>
+  <input #file (change)="onChange()" id="fileAttach" type="file" name="pic" accept="image/jpeg, image/png" hidden>
   <input type="text" class="message__text" name="text" ngModel placeholder="Type message here..">
   <button type="submit" class="material-icons">send</button>
 </form>
