--- a/src/app/sociality/messages/dialog/view-image/view-image.component.less
+++ b/src/app/sociality/messages/dialog/view-image/view-image.component.less
@@ -15,10 +15,57 @@
     display: flex;
     max-width: 100%;
     max-height: 80%;
-    display: flex;
 
     img {
       object-fit: contain;
+
+      &.top {
+        transform: rotate(0);
+      }
+
+      &.right {
+        transform: rotate(90deg);
+      }
+
+      &.bottom {
+        transform: rotate(180deg);
+      }
+
+      &.left {
+        transform: rotate(-90deg);
+      }
+    }
+
+    .actions {
+      position: fixed;
+      display: flex;
+      background: rgba(0, 0, 0, 0.8);
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 45px;
+      align-items: center;
+      justify-content: center;
+
+      .rotate {
+        display: flex;
+        align-items: center;
+        padding: 0 30px;
+        height: 100%;
+        opacity: 0.5;
+
+        &__right,
+        &__left {
+            opacity: 0.5;
+            transition: .2s;
+            cursor: pointer;
+        }
+
+        &__right:hover,
+        &__left:hover {
+            opacity: 1;
+        }
+      }
     }
   }
 
