Get and removing posts

--- a/src/app/sociality/profile/profile.component.html
+++ b/src/app/sociality/profile/profile.component.html
@@ -19,5 +19,6 @@
   <ul class="profile__info">
     <li *ngIf="profile.phone"><i class="material-icons">smartphone</i>{{ profile.phone }}</li>
     <li *ngIf="profile.email"><i class="material-icons">mail_outline</i>{{ profile.email }}</li>
-</ul>
+  </ul>
 </div>
+<app-posts>Loading posts...</app-posts>
